tests/invalid/bad_lui.s
  lui r2, r2, 0xA000
